<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity">

    <TextView
        android:id="@+id/title_activity_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/name_activity_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/name_activity_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintBottom_toTopOf="@id/surname_activity_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/surname_activity_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surname"
        app:layout_constraintBottom_toTopOf="@id/age_activity_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/age_activity_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        app:layout_constraintBottom_toTopOf="@id/surname_activity_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button_add_user_activity_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_update_user_activity_room"
        app:layout_constraintTop_toBottomOf="@id/age_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button_update_user_activity_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        android:backgroundTint="@color/colorUpdateUser"
        app:layout_constraintStart_toEndOf="@id/button_add_user_activity_room"
        app:layout_constraintEnd_toStartOf="@id/button_delete_user_activity_room"
        app:layout_constraintTop_toBottomOf="@id/age_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button_delete_user_activity_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:backgroundTint="@color/colorDeleteUser"
        app:layout_constraintStart_toEndOf="@id/button_update_user_activity_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/user_id_activity_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_id"
        app:layout_constraintStart_toStartOf="@id/button_update_user_activity_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_update_user_activity_room"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>